# labwc-next

./: .gitignore  README.md  meson.build
data/: labwc-next.desktop
docs/: README  config.toml  meson.build  theme.labwc
include/: ipc.h  ssd-internal.h  theme.h
include/common/: dir.h
include/config/: config-toml.h  rcxml.h  theme-dsl.h  theme-toml.h  toml-vars.h
include/img/: img.h
src/: desktop-entry.c  ipc.c  meson.build  output.c  server.c  theme.c  view-impl-common.c  view.c  workspaces.c
src/common/: dir.c  font.c  meson.build
src/config/: config-toml.c  meson.build  rcxml.c  session.c  theme-dsl.c  theme-toml.c  toml-vars.c
src/cycle/: osd-classic.c  osd-thumbnail.c
src/img/: img.c
src/menu/: menu.c
src/ssd/: ssd-button.c  ssd-titlebar.c
subprojects/: tomlc17.wrap
